--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.15",
     "axios": "^1.13.2",
+    "chart.js": "^4.5.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.555.0",
     "next": "16.0.5",
     "react": "19.2.0",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "19.2.0",
     "tailwind-merge": "^3.4.0",
     "yahoo-finance2": "^3.10.2"
