--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,6 +2,7 @@ fastapi==0.115.0
 uvicorn[standard]==0.32.0
 websockets==14.1
 python-dotenv==1.0.1
-pydantic==2.9.2
+pydantic==2.12.5
 python-multipart==0.0.12
+supabase==2.27.2
 
